# speedway-controller

./: Cargo.toml  LICENSE  README.md
app/: Cargo.toml  flash.sh  memory.x  openocd.cfg  openocd.gdb
app/.cargo/: config.toml
app/src/: main.rs  pwm.rs  serial.rs  step_timer.rs
tools/: Untitled.ipynb  data1.json  data2.json  data3.json
touch/: Cargo.toml
touch/src/: button.rs  lib.rs  linear.rs  tsc.rs
